--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,40 @@
 <resources>
     <string name="app_name">CupNews</string>
 
+    <!-- Errors text -->
     <!-- Text to display in the list when there are no news items [CHAR LIMIT=NONE] -->
-    <string name="no_news">No news found.</string>
+    <string name="no_news">No news found.\nPlease check back later\nor try to change  settings!</string>
     <!-- Text to display in the list when there is no internet connection [CHAR LIMIT=NONE] -->
-    <string name="no_connection">No internet connection.</string>
+    <string name="no_connection">No internet connection.\nPlease check your connectivity and try again!</string>
+    <string name="empty_query">Query text string cannot be empty!</string>
+
+    <!-- Settings strings -->
+    <string name="settings_menu_item">Settings</string>
+    <string name="settings_title">Cup News Settings</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Query text -->
+    <string name="settings_query_label">Query Text</string>
+    <string name="settings_query_key" translatable="false">query</string>
+    <string name="settings_query_default">world cup</string>
+
+    <!-- Query text -->
+    <string name="settings_date_label">Start date</string>
+    <string name="settings_date_key" translatable="false">start_date</string>
+    <string name="settings_date_default">2018-06-01</string>
+
+    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
+    <string name="settings_order_by_label">Order By</string>
+    <string name="settings_order_by_key" translatable="false">order_by</string>
+    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>
+
+    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
+    <string name="settings_order_by_relevance_label">Relevance (default)</string>
+    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
+
+    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
+    <string name="settings_order_by_newest_label">Most Recent (less relevant)</string>
+    <string name="settings_order_by_newest_value" translatable="false">newest</string>
+
 
 </resources>
